# bookmarker

./: .dockerignore  .env.dist  .gitignore  .prettierrc  Dockerfile  Dockerfile.app  Dockerfile.static  Pipfile  README.md  angular.json  docker-compose.example.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  tsconfig.json
.github/: dependabot.yml
.github/workflows/: dependabot.yml  deploy.yml  tests.yml
angular/: angular.json  package-lock.json  package.json
angular/src/: index.html
bookmarker/: auth0.py  settings.py  urls.py  wsgi.py
bookmarker/templates/: navigation.html  root.html
django/: .env.dist  .gitignore  README.md  docker-compose.yml  pyproject.toml
django/bookmarker/: asgi.py  firebase_auth.py  settings.py  urls.py
django/bookmarker/static/bookmarker/: stacks-icons-6.0.2.css
django/rest/: error_codes.py  exceptions.py  models.py  serializers.py  urls.py  utils.py  views.py
django/rest/migrations/: 0001_initial.py
django/rest/views/: bookmarks.py  tags.py
main/: adapter.py  forms.py  models.py  urls.py  views.py  widgets.py
main/migrations/: 0001_initial.py
main/templates/: bookmark_delete.html  bookmark_edit.html  bookmark_form.html  bookmark_form_wrapper.html  bookmark_new.html  bookmarks.html  generic_form.html  generic_form_wrapper.html  index.html  navigation.html  root.html  tag_delete.html  tags.html
main/templatetags/: bookmarks.py  tags.py
rest/: views.py
src/: styles.scss
src/app/: app.component.html  app.component.ts  app.config.ts  pipes.ts  (+10 more)
templates/: root.html
(+115 files in other folders)
